# TeacherEnd

./: .gitignore  CMakeLists.txt
include/liblouis/: liblouis.h
res/: images.qrc
src/main/: CMakeLists.txt  TeacherEnd.cpp  TeacherEnd.h  TeacherEnd.ui  main.cpp
src/pptsharing/: CMakeLists.txt  JniMethod.cpp  PptSharing.cpp  PptSharing.h  PptSharing.ui
src/pptsharingmanager/: BrailleTranslator.cpp  BrailleTranslator.h  CMakeLists.txt  JniMethod.h  PptPictureShape.cpp  PptPictureShape.h  PptShape.cpp  PptShape.h  PptSharing.ui  PptSharingManager.cpp  PptSharingManager.h  PptTextShape.cpp  PptTextShape.h  dataSave.cpp  dataSave.h
